:chore: criando dockerfile - frontend

--- a/app/frontend/Dockerfile
+++ b/app/frontend/Dockerfile
@@ -1,3 +1,8 @@
-# FROM node:16.14-alpine
-# WORKDIR /app-frontend
-#  ...
+FROM node:16.14-alpine
+WORKDIR /app-frontend
+COPY package.json .
+#ocorre na contrução da imagem
+RUN npm install
+COPY . .
+#comando que vai ser executado quando a imagem for carregada
+CMD ["npm", "run", "start"]
